[tool.poetry]
name = "powerReaper"
version = "0.1.0"
description = ""
authors = ["Parthipan N"]

[tool.poetry.scripts]
reap = "powerreaper.reap:main"

[tool.poetry.dependencies]
python = "3.7.5"
requests = "2.23.0"
beautifulsoup4 = "^4.9.0"

[tool.poetry.dev-dependencies]
pytest = "^4.6"
autopep8 = "^1.5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
